# sawt-back

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  test_setup.py
src/sawt/: __init__.py  agent.py  config.py
src/sawt/prompts/: system.py
